--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Shivam Triathi
 description: Personal Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/shivam-triathi/shivam-triathi.github.io/master/images/profile.jpg
 
 #
 # Flags below are optional
