Add new features

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 #
-# This file contains configuration flags to customize your site
+# This file contains configuration flags to customize my site
 #
 
-# Name of your site (displayed in the header)
-name: Shivam Triathi
+# Name of the site (displayed in the header)
+name: Shivam Tripathi
 
 # Short bio or description (displayed in the header)
 description: Personal Blog
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/shivam-triathi/shivam-triathi.github.io/master/images/profile.jpg
+# URL of the avatar or profile pic (you could use your GitHub profile pic)
+avatar: https://github.com/shivam-tripathi/shivam-tripathi.github.io/blob/master/images/profile.jpg
 
 #
 # Flags below are optional
@@ -18,19 +18,19 @@ avatar: https://raw.githubusercontent.com/shivam-triathi/shivam-triathi.github.i
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: shivamflash@gmail.com
   facebook:
   flickr:
-  github: shivam-triathi/
+  github: shivam-tripathi/
   instagram:
   linkedin:
-  pinterest:
+  pinterest: shivamflash
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: aShivamTripathi
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
-disqus:
+disqus: shiv
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
