--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: Shivam Tripathi
 # Short bio or description (displayed in the header)
 description: Personal Blog
 
-# URL of the avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/shivam-tripathi/shivam-tripathi.github.io/blob/master/images/profile.jpg
+# URL of the avatar or profile pic
+avatar: https://raw.githubusercontent.com/shivam-tripathi/shivam-tripathi.github.io/master/images/profile.jpg
 
 #
 # Flags below are optional
@@ -46,7 +46,7 @@ url:
 baseurl: ""
 
 #
-# !! You don't need to change any of the configuration flags below !!
+# !!No need to change anything below!!
 #
 
 markdown: kramdown
