Add some more ways to contact

--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://raw.githubusercontent.com/shivam-tripathi/shivam-tripathi.github
 footer-links:
   dribbble:
   email: shivamflash@gmail.com
-  facebook:
+  facebook: shivam.tripathi.3139
   flickr:
   github: shivam-tripathi/
   instagram:
-  linkedin:
+  linkedin: shivam-tripathi-50083110a
   pinterest: shivamflash
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: aShivamTripathi
